Fix on sprint for DAQI in low contrast mode

--- a/app/assets/sass/sprint-15/components/_daqi.scss
+++ b/app/assets/sass/sprint-15/components/_daqi.scss
@@ -44,6 +44,13 @@
 
   .daqi-selected {
       font-weight: bold;
+      svg {
+        display: none;
+    }
+    @media (forced-colours:active) {
+      svg {
+          display: block; 
+    }
   }
   
   .daqi-0 {
